fix overflow on code/pre tags

--- a/public/bootstrap/type.less
+++ b/public/bootstrap/type.less
@@ -187,4 +187,6 @@ pre {
 pre {
     margin: 0 0 (@baseline - 6);
     border: 1px solid #ccc;
+    display: block;
+    overflow: auto;
 }
